--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "client"]
 	path = client
 	url = git@github.com:sathyanarayanan-v/AmplifyC-Client.git
+[submodule "/Users/akash/Documents/projects/AmplifyC/API"]
+	path = /Users/akash/Documents/projects/AmplifyC/API
+	url = git@github.com:sathyanarayanan-v/AmplifyC-API.git
+[submodule "/Users/akash/Documents/projects/AmplifyC/Client"]
+	path = /Users/akash/Documents/projects/AmplifyC/Client
+	url = git@github.com:sathyanarayanan-v/AmplifyC-Client.git
